Fix firefox clipping problem.

--- a/docs/example.css
+++ b/docs/example.css
@@ -1,5 +1,6 @@
+html, body {width: 100%; height: 100%;}
 #graph {width: 100%; height: 100%;}
-#graph g.blue {fill: blue;}
+#graph {color: black;}
 #graph g.yellow {fill: yellow;}
 #graph g.red {fill: red;}
 #graph g.white {fill: white;}
